--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.2.3",
     "firebase": "^9.18.0",
     "firebase-admin": "^11.5.0",
+    "formik": "^2.2.9",
     "jquery": "^3.6.3",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
